# inference-providers

./: .gitignore  LICENSE  MANIFEST.in  README.md  inference-providers.json  inference-providers.py  inference_providers.json  inference_providers.py  pyproject.toml  requirements.txt
docs/: roll-call.md
src/inference-providers/: inference_providers.py
src/inference_providers/: __init__.py  inference_providers.json  inference_providers.py
src/inference_providers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: generate_roll_call.py  test-connection.py
