[project]
name = "inference-providers"
version = "0.2.1"
authors = [
  { name = "Stuart Riffle", email = "stuart@rifflemail.com" },
]
description = "A collection of commercial LLM inference providers and their available models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[build-system]
requires = ["setuptools>=42", "wheel", "natsort", "openai", "requests", "jsonmerge"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/stuartriffle/inference-providers"
